# Aiogram-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  dev-requirements.txt  docker-compose.yml  main.py  prod-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 00235a0d9a7c_init.py  5b600abedf8e_status_default_value_added.py  9784faed47d8_phone_added_to_order.py  a359844f45f9_order_status_added.py  c916b826f8bc_init.py  dd7812cd89fe_init.py
app/: handlers.py  keyboards.py
database/: models.py  products.py  redis_db.py  shop.db  sqlite_db.py  sqlite_db_dump.sql
docker/: docker-compose.yml
src/app/: main.py
src/app/api/: main.py
src/app/api/routers/: auth.py  users.py
src/app/api/services/: user_service.py
src/app/api/templates/: base.html  index.html  login.html
src/app/bot/: handlers.py  keyboards.py  main.py  payments.py
src/app/bot/core/: __init__.py  callbacks.py
src/app/bot/handlers/: __init__.py  admin_handlers.py  cart_handlers.py  handlers.py  handlers_routers.py  navigation_handlers.py  order_handlers.py  payment_handlers.py
src/app/bot/keyboards/: __init__.py  admin_keyboards.py  keyboards.py  navigation_keyboards.py  order_keyboards.py  testing_keyboards.py
src/app/bot/payments/: payments.py
src/app/bot/services/: cart_service.py
src/app/config/: constants.py  logger.py  settings.py
src/app/database/: models.py  redis_db.py  shop.db  sqlite_db.py
src/tests/: test_cart.py  test_main.py
(+1 files in other folders)
