[project]
name = "aiogram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
    "fastapi>=0.124.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
